--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ include_directories(
 	${PROJECT_SOURCE_DIR}/include
 	${PROJECT_SOURCE_DIR}/src
 	${PROJECT_SOURCE_DIR}/glm
+	#The above line *needs* to be here to use bracket includes <> for glm - and you HAVE To refresh CMakeLists in Visual Studio for intellisense to pick up the path!
 )
